# WoodPack

./: CMakeLists.txt  DepthCamera_2025-07-01-09-05-47.json  INSTALL.md  LICENSE  PointCloudProcessor.cpp  PointCloudProcessor.hpp  README.md  ScreenCamera_2025-04-23-16-39-16.json  ScreenCamera_2025-07-01-09-41-40.json  generate_flowchart.py.py  import base64.py  main.cpp  point_cloud_pipeline.mmd  width.py
config/: config.txt
corresponding_shingles/ply/: shingle_0_cloud_0.ply  shingle_10_cloud_0.ply  shingle_11_cloud_0.ply  shingle_12_cloud_0.ply  shingle_13_cloud_0.ply  shingle_14_cloud_0.ply  shingle_15_cloud_0.ply  shingle_16_cloud_0.ply  shingle_17_cloud_0.ply  shingle_18_cloud_0.ply  shingle_19_cloud_0.ply  shingle_1_cloud_0.ply  shingle_20_cloud_0.ply  shingle_21_cloud_0.ply  shingle_22_cloud_0.ply  shingle_23_cloud_0.ply  shingle_24_cloud_0.ply  shingle_25_cloud_0.ply  shingle_26_cloud_0.ply  shingle_27_cloud_0.ply  shingle_28_cloud_0.ply  shingle_29_cloud_0.ply  shingle_2_cloud_0.ply  shingle_30_cloud_0.ply  shingle_31_cloud_0.ply  shingle_32_cloud_0.ply  shingle_33_cloud_0.ply  shingle_34_cloud_0.ply  shingle_35_cloud_0.ply  shingle_36_cloud_0.ply  shingle_37_cloud_0.ply  shingle_38_cloud_0.ply  shingle_39_cloud_0.ply  shingle_3_cloud_0.ply  shingle_40_cloud_0.ply  shingle_41_cloud_0.ply  shingle_42_cloud_0.ply  shingle_43_cloud_0.ply  shingle_44_cloud_0.ply  shingle_45_cloud_0.ply  (+8 more)
data/: clusters_pc_1707758405.pcd  merged_cluster1.pcd  segmented_pc_1707218289.pcd  segmented_pc_1707758318.pcd
data/export/: boundingbox_box_0.ply  boundingbox_box_1.ply  boundingbox_box_10.ply  boundingbox_box_11.ply  boundingbox_box_12.ply  boundingbox_box_13.ply  boundingbox_box_14.ply  boundingbox_box_15.ply  boundingbox_box_16.ply  boundingbox_box_17.ply  boundingbox_box_18.ply  boundingbox_box_19.ply  boundingbox_box_2.ply  boundingbox_box_20.ply  boundingbox_box_21.ply  boundingbox_box_22.ply  boundingbox_box_23.ply  boundingbox_box_24.ply  boundingbox_box_25.ply  boundingbox_box_26.ply  boundingbox_box_27.ply  boundingbox_box_28.ply  boundingbox_box_29.ply  boundingbox_box_3.ply  boundingbox_box_30.ply  boundingbox_box_31.ply  boundingbox_box_32.ply  boundingbox_box_33.ply  boundingbox_box_34.ply  boundingbox_box_35.ply  boundingbox_box_36.ply  boundingbox_box_37.ply  boundingbox_box_38.ply  boundingbox_box_39.ply  boundingbox_box_4.ply  boundingbox_box_40.ply  boundingbox_box_41.ply  boundingbox_box_42.ply  boundingbox_box_43.ply  boundingbox_box_44.ply  (+228 more)
data/tests/: segmented_pc_1707758375.pcd
include/: GeometryProcessor.h  GeometryProcessor.hpp  PointCloudProcessor.hpp  custom_types.hpp  utils.hpp
output/: .~lock.shingle_widths_1.csv#  .~lock.shingle_widths_5.csv#  first_row_2025-04-30_18-48-57.txt  first_row_2025-04-30_19-22-27.txt  first_row_2025-05-05_16-16-41.txt  first_row_2025-05-06_10-44-18.txt  first_row_2025-05-06_11-11-22.txt  first_row_2025-05-06_15-11-25.txt  first_row_2025-05-09_09-25-14.txt  first_row_2025-05-09_10-25-23.txt  first_row_2025-05-09_10-46-41.txt  first_row_2025-05-09_11-15-14.txt  first_row_2025-05-09_11-22-02.txt  shingle_data_1.csv  shingle_data_1.txt  shingle_data_10.csv  shingle_data_10.txt  shingle_data_2.csv  shingle_data_2.txt  shingle_data_3.csv  shingle_data_3.txt  shingle_data_4.csv  shingle_data_4.txt  shingle_data_5.csv  shingle_data_5.txt  shingle_data_6.csv  shingle_data_6.txt  shingle_data_7.csv  shingle_data_7.txt  shingle_data_8.csv  shingle_data_8.txt  shingle_data_9.csv  shingle_data_9.txt  shingle_widths_1.csv  shingle_widths_2.csv  shingle_widths_3.csv  shingle_widths_4.csv  shingle_widths_5.csv
output/corresponding_shingles/ply/: shingle_0_cloud_0.ply  shingle_10_cloud_0.ply  shingle_11_cloud_0.ply  shingle_12_cloud_0.ply  shingle_13_cloud_0.ply  (+48 more)
output/export_shingle_data/: first_row.txt  shingle_data_1.csv  shingle_data_1.txt  shingle_data_10.csv  shingle_data_10.txt  shingle_data_11.csv  shingle_data_11.txt  shingle_data_12.csv  shingle_data_12.txt  shingle_data_13.csv  shingle_data_13.txt  shingle_data_2.csv  shingle_data_2.txt  shingle_data_3.csv  shingle_data_3.txt  shingle_data_4.csv  shingle_data_4.txt  shingle_data_5.csv  shingle_data_5.txt  shingle_data_6.csv  shingle_data_6.txt  shingle_data_7.csv  shingle_data_7.txt  shingle_data_8.csv  shingle_data_8.txt  shingle_data_9.csv  shingle_data_9.txt
src/: GeometryProcessor.cpp  PointCloudProcessor.cpp  main.cpp  utils.cpp
tools/: Stagger_Analysis.py  analyze_shingle_widths.cpp
